--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,19 +7,26 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
+export_path="../Builds/trellis.apk"
 patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
 
 [preset.0.options]
 
 graphics/32_bits_framebuffer=true
+xr_features/xr_mode=0
+xr_features/degrees_of_freedom=0
+xr_features/hand_tracking=0
 one_click_deploy/clear_previous_install=true
-custom_package/debug=""
-custom_package/release=""
+custom_template/debug=""
+custom_template/release=""
+custom_template/use_custom_build=false
 command_line/extra_args=""
 version/code=1
 version/name="1.0"
-package/unique_name="com.danimate.flipper"
-package/name="Flipper"
+package/unique_name="com.danimate.trellis"
+package/name="Trellis"
 package/signed=true
 screen/immersive_mode=true
 screen/orientation=1
@@ -27,11 +34,13 @@ screen/support_small=true
 screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
-launcher_icons/xxxhdpi_192x192=""
-launcher_icons/xxhdpi_144x144=""
-launcher_icons/xhdpi_96x96=""
-launcher_icons/hdpi_72x72=""
-launcher_icons/mdpi_48x48=""
+screen/opengl_debug=false
+launcher_icons/main_192x192=""
+launcher_icons/adaptive_foreground_432x432=""
+launcher_icons/adaptive_background_432x432=""
+keystore/debug=""
+keystore/debug_user=""
+keystore/debug_password=""
 keystore/release=""
 keystore/release_user=""
 keystore/release_password=""
@@ -42,6 +51,7 @@ architectures/armeabi-v7a=true
 architectures/arm64-v8a=false
 architectures/x86=false
 architectures/x86_64=false
+permissions/custom_permissions=PoolStringArray(  )
 permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
 permissions/access_fine_location=false
@@ -187,23 +197,3 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
-user_permissions/0=false
-user_permissions/1=false
-user_permissions/2=false
-user_permissions/3=false
-user_permissions/4=false
-user_permissions/5=false
-user_permissions/6=false
-user_permissions/7=false
-user_permissions/8=false
-user_permissions/9=false
-user_permissions/10=false
-user_permissions/11=false
-user_permissions/12=false
-user_permissions/13=false
-user_permissions/14=false
-user_permissions/15=false
-user_permissions/16=false
-user_permissions/17=false
-user_permissions/18=false
-user_permissions/19=false
